implement report system
